--- a/src/App.css
+++ b/src/App.css
@@ -419,3 +419,83 @@ body{
   top: 85%;
   left: 50%;
 }
+
+.aboutButton{
+  appearance: none;
+  background-color: var(--darkgray);
+  border: 0.125em solid var(--offwhite);
+  border-radius: 0.9375em;
+  box-sizing: border-box;
+  cursor: pointer;
+  color: var(--offwhite);
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  transition: opacity 0.25s;
+  opacity: 100%;
+  z-index: 3; 
+}
+
+.aboutButton:hover {
+  color: var(--darkgray);;
+  background-color: var(--offwhite);
+  transform: translateY(-2px);
+ }
+
+ .aboutButton:active {
+  transform: translateY(0);
+ }
+
+#aboutOverlay {
+  position: fixed; 
+  display: block;
+  width: 100%; 
+  height: 100%; 
+  top: 52px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(17, 19, 20, 0.95); 
+  z-index: 2; 
+  opacity: 100%;
+  transition: opacity 0.25s;
+}
+
+#aboutOverlay.hide {
+  opacity: 0%;
+  transition: opacity 0.25s;
+  display: none;
+}
+
+.aboutInfo{
+  position: fixed; 
+  display: block;
+  font-size: 32px;
+  width:100vh;
+  top: 52px;
+  left: 50%;
+  transform: translate(-50%,0%);
+  max-width: 375px;
+  opacity: 100%;
+  transition: opacity 0.25s;
+}
+
+.aboutInfo.hide{
+  opacity: 0%;
+  transition: opacity 0.25s;
+  display: none;
+}
+
+.aboutLink{
+  color: var(--offwhite);
+}
